--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,10 +1,9 @@
-.vscode/**
-.vscode-test/**
-out/test/**
+.vscode
+node_modules
 src/**
-.gitignore
+package-json.lock
+tsconfig.json
+webpack.config.js
 vsc-extension-quickstart.md
-**/tsconfig.json
-**/tslint.json
-**/*.map
-**/*.ts
+.editorconfig
+images/
