--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
-  "name": "bespohk-ducks-typescript-generator",
+  "name": "ducks-typescript-generator",
   "displayName": "Ducks TypeScript Generator",
   "description": "Automatically generate a folder structure and relevant files based on the Ducks pattern, as seen at https://github.com/erikras/ducks-modular-redux.",
   "version": "1.0.0",
+  "repository": {
+    "url": "https://github.com/Bespohk/vscode-ducks-typescript-generator"
+  },
+  "publisher": "Bespohk",
   "engines": {
     "vscode": "^1.38.0"
   },
   "categories": [
+    "Snippets",
     "Other"
   ],
   "activationEvents": [
     "onCommand:extension.generateDuck",
     "onCommand:extension.initializeDucks"
   ],
-  "main": "./out/extension.js",
+  "main": "./dist/extension",
   "contributes": {
     "commands": [
       {
@@ -27,11 +32,11 @@
     ]
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile",
-    "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
-    "pretest": "npm run compile",
-    "test": "node ./out/test/runTest.js"
+    "vscode:prepublish": "webpack --mode production",
+    "webpack": "webpack --mode development",
+    "webpack-dev": "webpack --mode development --watch",
+    "test-compile": "tsc -p ./",
+    "lint": "tslint -p ./"
   },
   "devDependencies": {
     "@types/glob": "^7.1.1",
@@ -40,9 +45,12 @@
     "@types/vscode": "^1.38.0",
     "glob": "^7.1.4",
     "mocha": "^6.1.4",
-    "typescript": "^3.3.1",
+    "ts-loader": "^6.2.0",
     "tslint": "^5.12.1",
-    "vscode-test": "^1.2.0"
+    "typescript": "^3.3.1",
+    "vscode-test": "^1.2.0",
+    "webpack": "^4.41.1",
+    "webpack-cli": "^3.3.9"
   },
   "dependencies": {
     "fast-glob": "^3.0.4"
